assets/config/custom-styles.css
.w .lb {
    display: none;
}

.ab[rend="align-center"] {
    display: block;
    text-align: center;
}

*[rend="align-center"] {
    display: inline-block;
    text-align: center !important;
    margin: 0;
    padding: 0;
}

*[rend="strikethrough"] {
    text-decoration: line-through;
}

*[rend="overwritten"] {
    font-weight: bold;
}

*[rend="underline"] {
    text-decoration: underline;
}

*[rend="italic"] {
    font-style: italic;
}

*[rend="erasure"] {
    background-color: rgb(70, 70, 70);
}

*[rend="cross"] {
    text-decoration: line-through;
}

*[rend="line_full_width"] {
    margin-bottom: 0.1rem;
    border-bottom: 1px solid black;
    display: block;
}

*[place="superscript"] {
    vertical-align: text-bottom;
}

evt-page :not(evt-apparatus-entry-detail) .head {
    font-weight: bold;
    display: inline-block;
    padding: 0.5em 0.1em 0.5em 0em;
}

evt-page :not(evt-apparatus-entry-detail) .closer {
    display: block;
}

evt-page :not(evt-apparatus-entry-detail) .signed {
    display: inline-block;
    /* font-style: italic; */
}

evt-page :not(evt-apparatus-entry-detail) .retrace {
    font-weight: bolder;
}

evt-page :not(evt-apparatus-entry-detail) .verse-num {
    color:black !important;
}

evt-page :not(evt-apparatus-entry-detail) .verse-num:before {
    border:none !important;
    background: none !important;
}

.metamark[rend="line"] {
    display: block;
    border: 1px solid black;
    margin-top:-1em;
    margin-right:70%;
}

evt-reading evt-note,
evt-addition evt-note {
  display: none;
}

.fw {
    display: block;
}

[type="pageNum"][place="top_right"] {
    float:right;
    margin-top: -1.5rem;
}

[type="sermo-bibl-right"]{
    float: right;
    font-style: italic;
}
[type="sermo-bibl-left"]{
    float: right;
    font-style: italic;
}

div[type="sermo"] p {
    margin-bottom: 0 !important;
}
span.lb{
    height: 0;
}

*[type="float-under"], *[type="float-above"] {
    float: right;
    margin-right: 2em;
}

*[type="source"] {
    float: right;
    font-style: italic;
    margin-left: 2em;
}

